--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div class="container text-center">
-        <div>
-
-        </div>
+    
+    <div class="container">
+        <h1>La tua lista della spesa! Non scordartene!!!</h1>
         <ul id="list">
 
         </ul>
